{{$NEXT}}

0.77     2020-01-04 (TRIAL RELEASE)

- Made some more line ending fixes in the test code.

- Fixed a test to handle spaces with paths (on Windows, at least).


0.76     2019-12-24 (TRIAL RELEASE)

- Preserve line endings in files but using raw mode to read and
  write. Otherwise Perl will automatically write files with the
  platform-appropriate ending. This could lead to ending "flapping" if you
  have developers working on the same project on different platforms, and
  probably lots of other annoying issues. Based on PR #97 from Kenneth Ölwing.


0.75     2019-12-24

- Git v2.24.0 introduced a serious bug when running `git stash` with the
  `--quiet` flag that causes it to delete files. This in turn caused this
  package's pre-commit hook code to be seriously broken. We no longer pass the
  `--quiet` flag if the git version is >= 2.24. We re-enable the flag once
  there is a version that fixes this bug.

- The pre-commit hook code now uses `git rev-parse -q --verify refs/stash` to
  determine if the call to `git stash` actually does anything. This seems
  better than attempting to parse the output of the `git stash` call for a
  user-facing message.

0.74     2019-05-24

- Fix a warning that would happen when applying shebang matching to empty
  files. Fixed by Greg Oschwald. GH #93.


0.73     2019-01-20

- Fix test failures on Windows. Based on GH #91 from Shlomi Fish.


0.72     2018-12-20

- Added documentation for the -j/--jobs flag to the tidyall script's help
  output and POD docs.

- Make the --iterations flag for bin/tidyall actually work. This had been
  documented but it has never actually done anything (though setting this in
  your config file does work).


0.71     2018-09-12

- Added two new plugins, GenericValidator and GenericTransformer. These allow
  you to execute any command as a validator or transformer respectively. This
  should be sufficient to keep us all from having to write new plugins for